--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>scorenet</title>
   </head>
-  <body style="padding: 0;margin: 0">
+  <body style="padding: 0;margin: 0;width: 100%;height: 100%">
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="static/jquery-3.3.1.min.js"></script>
