--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- 引入vConsole的JS库 -->
     <title>scorenet</title>
   </head>
   <body style="padding: 0;margin: 0;width: 100%;height: 100%">
